--- a/mezzanine/core/templates/includes/search_form.html
+++ b/mezzanine/core/templates/includes/search_form.html
@@ -1,16 +1,13 @@
 {% load mezzanine_tags i18n %}
-<form action="{% url "search" %}" class="navbar-form navbar-right" role="search">
+<form action="{% url "search" %}" class="form-inline my-2 my-lg-0" role="search">
 
-<div class="form-group">
-    <input class="form-control" placeholder="{% trans "Search" %}" type="text" name="q" value="{{ request.GET.q }}">
-</div>
+<input class="form-control mr-sm-2" placeholder="{% trans "Search" %}" type="search" name="q" value="{{ request.GET.q }}">
 
 {% if search_model_choices %}
     {% if search_model_choices|length == 1 %}
     <input type="hidden" name="type" value="{{ search_model_choices.0.1 }}">
     {% else %}
-    <div class="form-group">
-    <select class="form-control" name="type">
+    <select class="form-control mr-sm-2" name="type">
         <option value="">{% trans "Everything" %}</option>
         {% for verbose_name, model in search_model_choices %}
         <option value="{{ model }}"
@@ -19,10 +16,9 @@
         </option>
         {% endfor %}
     </select>
-    </div>
     {% endif %}
 {% endif %}
 
-<input type="submit" class="btn btn-default" value="{% trans "Go" %}">
+<button type="submit" class="btn btn-outline-success my-2 my-sm-0"> {% trans "Go" %} </button>
 
 </form>
