--- a/mezzanine/core/templates/index.html
+++ b/mezzanine/core/templates/index.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Home" %}{% endblock %}
 
 {% block breadcrumb_menu %}
-<li class="active">{% trans "Home" %}</li>
+<li class="breadcrum-item active">{% trans "Home" %}</li>
 {% endblock %}
 
 {% block main %}
